force-app/main/default/objects/Lote_de_Caf__c/Lote_de_Caf__c.object-meta.xml
<CustomObject>
    <label>Lote de Café</label>
    <nameField>
        <displayFormat>LOTE-{0000}</displayFormat>
        <label>Código do Lote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lotes de Café</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>