force-app/main/default/objects/Lote_de_Caf__c/fields/Acidez__c.field-meta.xml
<CustomField>
    <fullName>Acidez__c</fullName>
    <label>Acidez</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>