force-app/main/default/objects/Lote_de_Caf__c/fields/Corpo__c.field-meta.xml
<CustomField>
    <fullName>Corpo__c</fullName>
    <label>Corpo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>