force-app/main/default/objects/Lote_de_Caf__c/fields/Docura__c.field-meta.xml
<CustomField>
    <fullName>Docura__c</fullName>
    <label>Doçura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>