force-app/main/default/objects/Lote_de_Caf__c/fields/Fazenda__c.field-meta.xml
<CustomField>
    <fullName>Fazenda__c</fullName>
    <label>Fazenda</label>
    <referenceTo>Fazenda__c</referenceTo>
    <relationshipLabel>Lotes de Café</relationshipLabel>
    <relationshipName>Lotes_de_Caf</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>