force-app/main/default/objects/Lote_de_Caf__c/fields/Nota_SCA__c.field-meta.xml
<CustomField>
    <fullName>Nota_SCA__c</fullName>
    <label>Nota SCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>