force-app/main/default/objects/Lote_de_Caf__c/fields/Sacas_Produzidas__c.field-meta.xml
<CustomField>
    <fullName>Sacas_Produzidas__c</fullName>
    <label>Sacas Produzidas</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>