force-app/main/default/objects/Lote_de_Caf__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>Consumo Interno</fullName>
            </value>
            <value>
                <fullName>Pronto para Exportação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>