force-app/main/default/objects/Lote_de_Caf__c/fields/Status_Especial__c.field-meta.xml
<CustomField>
    <fullName>Status_Especial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Café é considerado especial? (Altitute &gt; 1000)</description>
    <label>Status Especial</label>
    <type>Checkbox</type>
</CustomField>