force-app/main/default/objects/Lote_de_Caf__c/fields/Variedade__c.field-meta.xml
<CustomField>
    <fullName>Variedade__c</fullName>
    <label>Variedade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arábica</fullName>
            </value>
            <value>
                <fullName>Robusta</fullName>
            </value>
            <value>
                <fullName>Catuaí Amarelo</fullName>
            </value>
            <value>
                <fullName>Bourbon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>